# tack-snapshots

./: AUTHORS  CHANGES  HISTORY  Makefile.in  README  aclocal.m4  ansi.c  charset.c  color.c  configure  configure.in  control.c  crum.c  edit.c  fun.c  init.c  makefile  menu.c  modes.c  modules  ncurses_tst.hin  output.c  pad.c  scan.c  scan.wy150  sync.c  sysdep.c  tac.h  tack.1  tack.c  tack.h  tackcfg.h  tackgen.c
package/: tack.spec
package/debian/: changelog  control  copyright  docs  rules  watch
